<resources>
    <string name="app_name">Денежные медитации</string>
	<string name="paywall_pricetext">3 дня бесплатно, далее  </string>
	<string name="paywall_pricetext2"> / месяц</string>
	<string name="meditLoadHead">Загрузка</string>
	<string name="meditLoadBody">Медитация будет готова через несколько секунд..</string>
	<string name="onboard1_head">Денежные медитации</string>
	<string name="onboard1_body">В них мы концентрируемся на деньгах 
		и направляем силу мысли на формирование денежного потока.</string>
	<string name="btn_next">Продолжить</string>
	<string name="onboard2_head">Денежные аффирмации</string>
	<string name="onboard2_body">Будут отличным дополнением к медитациям, 
		и позволят Вам создать правильный психологический настрой.</string>
	<string name="onboard3_head">Главное - регулярность.\n
		Всего 10 минут в день!</string>
	<string name="onboard3_body">Чтобы медитации имели эффект, 
		делайте их каждый день без пропусков.</string>
	<string name="main_head">Уровень денежной энергии:</string>
	<string name="level_mid">средний</string>
	<string name="level_low">низкий</string>
	<string name="level_height">высокий</string>
	<string name="main_body">Старайся поддерживать индикатор в\nзеленой 
		зоне\n\n
		Медитируй каждый день и открывай уведомления с денежными 
		аффирмациями</string>
	<string name="main_btn_medit">Медитировать</string>
	<string name="main_btn_medit_refresh">Обновится через</string>
	<string name="hours">часов</string>
	<string name="hours2">часа</string>
	<string name="hours1">час</string>
	<string name="minutes">минут</string>
	<string name="minutes2">минуты</string>
	<string name="minutes1">минуту</string>
	<string name="main_btn_medit_refcompl">Обновлено сегодня в 00:01</string>
	<string name="main_btn_affim">Аффирмации</string>
	<string name="politic_btn">Политика конфиденциальности</string>
	<string name="qw1_h">У вас уже был опыт медитации?</string>
	<string name="qw1_d">Мы подберем занятия в зависимости от вашего опыта</string>
	<string name="qw1_q1">Не было</string>
	<string name="qw1_q2">Да, уже пробовал медитации</string>
	<string name="qw1_q3">Давно медитирую</string>
	<string name="qw1_a1">Отлично! Наши медитации подходят
		для новичков.\n\n
		Мы начнем с самой простой.</string>
	<string name="qw1_a2">Отлично! Уверены, что денежные
		медитации вам понравятся.\n\n
		Мы начнем с самой простой.</string>
	<string name="qw1_a3">Отлично! Уверены, что денежные
		медитации вам понравятся.</string>
	<string name="qw2_h">Что для вас сейчас важнее?</string>
	<string name="qw2_d">Выберите наиболее важную цель, ради которой
		вы будете делать денежные медитации</string>
	<string name="qw2_q1">Избавиться от
		долгов и кредитов</string>
	<string name="qw2_q2">Привлечь деньги в
		свою жизнь</string>
	<string name="qw2_q3">Выйти на новый
		уровень дохода</string>
	<string name="qw2_q4">Сделать дорогую
		покупку</string>
	<string name="qw2_q5">Съездить в
		путешествие</string>
	<string name="qw2_q6">Осуществить мечту</string>
	<string name="qw2_a1">Денежные медитации помогут изменить
		мышление, благодаря чему вы сможете закрыть
		свои кредиты и долги. \n\n
		А также научитесь привлекать богатство и
		изобилие в свою жизнь.\n
		Попробуйте!</string>
	<string name="qw2_a2">Денежные медитации помогут привлечь
		богатство и изобилие.\n\n
		Делайте их регулярно, и деньги начнут
		приходить из самых неожиданных источников.\n
		Попробуйте!</string>
	<string name="qw2_a3">Наши медитации помогут проработать
		денежные блоки и негативные установки,
		которые блокируют рост вашего дохода.\n
		Попробуйте!</string>
	<string name="qw2_a4">Денежные медитации помогут осуществить
		ваши материальные желания.\n\n
		Медитируйте регулярно, и деньги начнут
		приходить из самых неожиданных источниковю\n
		Попробуйте!</string>
	<string name="hdjf">Meditation</string>
	<string name="qw2_kskxnxq2">Meditation</string>
	<string name="faq_head">О денежных медитациях</string>
	<string name="faq1_title">Как работают денежные медитации?</string>
	<string name="faq1_body">Медитации очищают мозг от страхов
		и негативных установок, блокирующих увеличение 
		дохода. В наших практиках вы будете слышать слова,
		которые способны создавать новые конструктивные 
		мысли и убеждения. После этого вы повсюду начнете
		замечать возможности, которых не видели раньше.
\n\n
		10 минут медитаций в день положительно влияют не
		только на ваше благосостояние, но и самочувствие.
		Улучшается внимание, вы становитесь спокойнее.
		А также снижается количество негативных эмоций
		и переживаний.  Благодаря постоянным практикам
		ваши утренние подъёмы с кровати станут легче,
		а жизнь - богаче.
	</string>
	<string name="faq2_title">Как выбрать медитацию?</string>
	<string name="faq2_body">
	Медитация обновляется раз в день, выбрать другую медитацию не дожидаясь обновления нельзя. 
	\n\n
	Мы проанализировали другие приложения по медитациям и заметили,
	что пользователям приходится тратить огромное количество
	времени на ненужные настройки и выбор медитаций.
	Мы пошли другим путем и сделали все проще, чтобы вы
	могли запустить медитацию в любое время не тратя время 
		на поиск нужной медитации и настройки.</string>
	<string name="faq3_title">Как обновить медитацию?</string>
	<string name="faq3_body">
	Медитация на день обновляется автоматически каждые 24
	часа (в 00:01 по местному времени). Обновить медитацию
	вручную нельзя. Каждый день доступна только одна медитация.
	</string>
	<string name="faq4_title">Еще</string>
	<string name="faq4_body">
	Использованная в медитациях музыка:
	- <a href="https://www.pond5.com/ru/royalty-free-music/item/128173194-magic-forest-meditation">Stock music</a> provided by wavetune, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/109517984-yeshua-30m-track-piano-cinematic-soundtrack-emotional-beauti">Stock music</a> provided by heavenlysound, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/134211239-wellness-massage-chill-zen-meditation-yoga-432-hz">Stock music</a> provided by TopSounds, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/129051016-meditation-calming-busy-mind">Stock music</a> provided by AudiouslyPro, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/129050878-peaceful-mindfulness-meditation">Stock music</a> provided by AudiouslyPro, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/142138427-10-min-meditation-abundant-and-prosperous-morning-inspiring">Stock music</a> provided by ThinkrootRecords, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/126526256-meditation">Stock music</a> provided by wavetune, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/125426899-its-meditation">Stock music</a> provided by Ashot_Danielyan_Composer, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/129505696-bright-meditation">Stock music</a> provided by wavetune, from <a href="https://www.pond5.com/">Pond5</a>

	- <a href="https://www.pond5.com/ru/royalty-free-music/item/138091911-healing-meditationinspirationyogaspamantracalmsleepnature1-h">Stock music</a> provided by AG_Music, from <a href="https://www.pond5.com/">Pond5</a>
	</string>
	<string name="medit_head">Денежная медитация на сегодня</string>
	<string name="medit_compl_head">Медитация завершена!</string>
	<string name="medit_compl_body">Новая будет доступна завтра.</string>
	<string name="medit_desc_body">
		На время практики найдите уединённое место, 
		где вам никто не помешает. Медитации желательно 
		выполнять сидя, скрестив ноги. Вы можете сесть на 
		кровать или на пол, подложив коврик или подушку. 
		Сядьте так, чтобы позвоночник был ровным. Руки 
		опустите вдоль тела. Можете положить их на колени ладонями вверх.
\n\n
		Если хотите, вы можете лечь. Но наши практики направлены на работу не только с подсознанием, но и с сознанием, поэтому исключите, пожалуйста, вероятность сна в эти 10 минут. Счастья и денег вам! Приступайте к практике.
	</string>
	<string name="medit_desc_head">Как делать медитацию?</string>
	<string name="medit_esc_title">Точно хотите выйти?</string>
	<string name="medit_esc_body">Медитация не завершена. Вы точно хотите выйти? 
		Текущая медитация будет доступна еще </string>
	<string name="medit_esc_btnyes">Выйти</string>
	<string name="medit_esc_btnni">Нет</string>
	<string name="affir_dial_head">Денежные аффирмации</string>
	<string name="affir_dial_text">Аффирмации — это фразы направленные на закрепление определенного шаблона, цели или стремления. Удивительно, но стоит только настроится на определенный результат, как сразу начинают всплывать различные способы его достижения, причём такие, о которых ранее нельзя было даже подумать.
\n\n
		Работайте с ними каждый день, произнося их вслух или про себя, и результат не заставит ждать! Представляйте ярко, с подробностями, старайтесь рассмотреть вашу мечту во всех деталях. Чем четче окажется картинка, тем проще будет подсознанию принять ее за реальность и «пристроить» к себе в качестве установки.
	</string>
	<string name="affir_head">Денежные аффирмации</string>
	<string name="affir_textqaq"><u>Что такое аффирмации?</u></string>
	<string name="affir_swich">Присылать аффирмации</string>
	<string name="affir_count">Аффирмаций в день:</string>
	<string name="affir_loockat">Посмотрите, как это будет выглядеть:</string>
	<string name="affir_btn">Прислать пример уведомления</string>
	<string name="affir_bottom">Помните: главное что бы вы читали каждую 
		аффирмацию мысленно или вслух.
		\n\n
		Иначе в них не будет смысла.</string>
	<string name="affirm1">Я магнит, притягивающий счастье, 
		успех и благоприятные возможности</string>
	<string name="noty_affirm_head">Новая денежная аффирмация!</string>
	<string name="noty_text_affirm">Настало время аффирмации!</string>
	<string name="noty_refresh_head">Денежная медитация обновлена!</string>
	<string name="noty_text_refresh">Будет доступна сегодня до 23:59.</string>
</resources>